using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isAppear = "isAppear";
    internal static string canMove = "canMove";
    internal static string isSliding = "isSliding";
    internal static string isAlive = "isAlive";

    internal static string doubleJump = "doubleJump";


    internal static string yVelocity = "yVelocity";



    internal static string fruitNumber = "fruitNumber";
    internal static string isCollected = "isCollected";

    internal static string type = "type";
    internal static string hit = "hit";
    internal static string endurance = "endurance";

    internal static string isReady  = "ready";
    internal static string start = "start";

    internal static string hit_top = "hit_top";
    internal static string hit_side = "hit_side";
    internal static string hit_bot = "hit_bot";
    internal static string hit_right = "hit_right";
    internal static string hit_left = "hit_left";

    internal static string hasTarget = "hasTarget";
    internal static string attack = "attack";

}
